--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 		<p>互相交流 Q群：186583954</p>
 	</div>	
 	<div style="height: 250px;margin: 20px auto;text-align: center;border:5px solid #f1f1f1; max-width:600px;padding: 15px;line-height: 1.7;">
+		<p>仙箓</p>
+		<img src="xl.jpg" alt="戴某" width="240px" height="180px" >
+	</div>		
+	<div style="height: 250px;margin: 20px auto;text-align: center;border:5px solid #f1f1f1; max-width:600px;padding: 15px;line-height: 1.7;">
 		<p>淘金城镇</p>
 		<img src="tjcc.jpg" alt="戴某" width="240px" height="180px" >
 	</div>	
