--- a/index.html
+++ b/index.html
@@ -1,35 +1,38 @@
 <head></head>
 <body style="margin:0;">
 	<div style="background-color:#f1f1f1;text-align: center;padding: 40px;">	
-		<img src="af.jpg" alt="戴某" width="80px" height="60px" >
+		<img src="af.jpg" alt="戴某" width="240px" height="180px" >
 	</div>
-	<div style="height: 500px;margin: 30px auto;border:5px solid #f1f1f1; max-width:600px;padding: 15px;line-height: 1.7;">
+	<div style="height: auto;margin: 30px auto;border:5px solid #f1f1f1; max-width:600px;padding: 15px;line-height: 1.7;">
 		<p>我是阿飞</p>
 		<p>"创造一个属于自己想要的世界"</p>
 		<p>建个链游社区</p>
 		<p>链游项目信息网站</p>
 		<p>招募合作伙伴</p>
 		<p>更多人参与进来</p>
-		<p>互相交流 Q群：186583954</p>
+		<p>互相交流 Q群:186583954</p>
 	</div>	
-	<div style="height: 250px;margin: 20px auto;text-align: center;border:5px solid #f1f1f1; max-width:600px;padding: 15px;line-height: 1.7;">
-		<p>仙箓</p>
+	<div style="height: auto;margin: 20px auto;text-align: center;border:5px solid #f1f1f1; max-width:600px;padding: 15px;line-height: 1.7;">
 		<img src="xl.jpg" alt="戴某" width="240px" height="180px" >
+		<p>仙箓</p>
+		<p>这两天马上内测，数据代码据说是外包给阿里巴巴团队的，整体游戏界面和用户交互ui做的都很舒服</p>
 	</div>		
 	<div style="height: 250px;margin: 20px auto;text-align: center;border:5px solid #f1f1f1; max-width:600px;padding: 15px;line-height: 1.7;">
 		<p>淘金城镇</p>
 		<img src="tjcc.jpg" alt="戴某" width="240px" height="180px" >
 	</div>	
-	<div style="height: 250px;margin: 20px auto;border:5px solid #f1f1f1; max-width:600px;padding: 15px;line-height: 1.7;text-align: center;">
+	<div style="height: 250px;margin: 20px auto;border:5px solid #2b0b0b; max-width:600px;padding: 15px;line-height: 1.7;text-align: center;">
 		<p>逆天记</p>
 		<img src="ntj.jpg" alt="戴某" width="240px" height="180px" >
 	</div>	
-	<div style="height: 250px;margin: 20px auto;border:5px solid #f1f1f1; max-width:600px;padding: 15px;line-height: 1.7;text-align: center;">
-		<p>梦幻神将</p>
+	<div style="height: auto;margin: 20px auto;border:5px solid #8680291c; max-width:600px;padding: 15px;line-height: 1.7;text-align: center;">
 		<img src="mhsj.jpg" alt="戴某" width="240px" height="180px" >
+		<p>梦幻神将</p>
+		<p>代理系统太卷了，顶商有五个免费一级代理名额，一级又有五个二级代理名额，把这些免费名额卖出去就回本了，等于白嫖一个代理，只有二级是真的出了玉石的，就怕到时候顶商和一级懒得做事，有点膈应人，官方兜底目前还不知道，而且公司注册资金只有10W
+		</p>
 	</div>	
-	<div style="background-color:#f1f1f1;text-align: center;padding: 40px;font-size: 12px;">	
-		<P>版权所有：aflianyou.com</P>
+	<div style="background-color:#a1a79c;text-align: center;padding: 40px;font-size: 12px;">	
+		<P>版权所有:aflianyou.com</P>
 		<a>阿飞的链游仓库<a>
 	</div>
 
